--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ferreteria</title>
 
     <link rel="stylesheet" href="css/sales.css">
+    <link rel="stylesheet" href="//cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css">
 
     <script src="https://kit.fontawesome.com/4010e4a14f.js" crossorigin="anonymous"></script>
 </head>
@@ -14,7 +15,7 @@
     <div id="Main"></div>
 
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    
+    <script src="//cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
     <script src="js/constants.js"></script>
     <script src="js/index.js"></script>
 </body>
