--- a/reporteArticulos.html
+++ b/reporteArticulos.html
@@ -1,13 +1,12 @@
 <div class="window">
     <div class="window__container">
         <div class="window__header">
-            <h5>Reportes</h5>
+            <h5>Reporte de Articulos</h5>
             <button class="window__close"><i class="fa-solid fa-xmark"></i></button>
         </div>
         <div class="window__body">
-            <div class="funciones">
-                <input id="BtnReporteVentas" type="button" class="btn-funcion" value="Reporte Ventas"/>
-                <input id="BtnReporteArticulos" type="button" class="btn-funcion" value="Reporte Articulos"/>
+            <div class="tabla-articulos">
+                <table id="TblArticulos" class="display"></table>
             </div>
         </div>
     </div>
