feat: botón de cancelación de cuenta

--- a/sales.html
+++ b/sales.html
@@ -2,11 +2,14 @@
     <main class="main">
         <section id="Articulos" class="items"></section>
         <section class="controls">
-            <button id="Funciones" class="controls__item controls__item--orange">
-                Funciones
-            </button>
             <button id="Pagar" class="controls__item controls__item--green">
                 Pagar
+            </button>
+            <button id="CancelarCuenta" class="controls__item controls__item--red">
+                Cancelar Cuenta
+            </button>
+            <button id="Funciones" class="controls__item controls__item--orange">
+                Funciones
             </button>
         </section>
     </main>
