feat: módulo de usuario

--- a/cliente.html
+++ b/cliente.html
@@ -10,15 +10,15 @@
         <div class="window__body">
             <div class="form-cliente">
                 <label class="label" for="TxtCedula">Cédula</label>
-                <input class="input" id="TxtCedula" name="cedula" type="text"/>
+                <input class="input" id="TxtCedula" name="cedula" type="text" required="true" autocomplete="false"/>
                 <label class="label" for="TxtNombre">Nombre</label>
-                <input class="input" id="TxtNombre" name="nombre" type="text"/>
+                <input class="input" id="TxtNombre" name="nombre" type="text" required="true" autocomplete="false"/>
                 <label class="label" for="TxtDireccion">Direccion</label>
-                <input class="input" id="TxtDireccion" name="direccion" type="text"/>
+                <input class="input" id="TxtDireccion" name="direccion" type="text" required="true" autocomplete="false"/>
                 <label class="label" for="TxtTelefono">Teléfono</label>
-                <input class="input" id="TxtTelefono" name="telefono" type="text"/>
+                <input class="input" id="TxtTelefono" name="telefono" type="text" autocomplete="false"/>
                 <label class="label" for="TxtCorreo">Correo</label>
-                <input class="input" id="TxtCorreo" name="correo" type="text"/>
+                <input class="input" id="TxtCorreo" name="correo" type="text" required="true" autocomplete="false"/>
             </div>
         </div>
         <div class="window__footer">
