--- a/funciones.html
+++ b/funciones.html
@@ -8,6 +8,7 @@
             <div class="funciones">
                 <input id="BtnArticulos" type="button" class="btn-funcion" value="Articulos"/>
                 <input id="BtnReportes" type="button" class="btn-funcion" value="Reportes"/>
+                <input id="BtnSalir" type="button" class="btn-funcion" value="Salir de la Cuenta"/>
             </div>
         </div>
     </div>
