feat: modulo de modificación datos cliente por usuario

--- a/usuario.html
+++ b/usuario.html
@@ -1,6 +1,6 @@
 <div class="menu">
     <main class="main-menu">
-        <button class="btn-blue">Datos Personales</button>
+        <button id="BtnDatosCliente" class="btn-blue">Datos Personales</button>
         <button id="BtnCompras" class="btn-blue">Compras</button>
         <button id="BtnArticulosCliente" class="btn-blue">Articulos</button>
         <input id="BtnSalir" type="button" class="btn-red" value="Salir de la Cuenta"/>
